# wear-datas

./: .gitignore  ACTION_PLAN.md  CLAUDE.md  INSTALL.md  PROGRESS_TRACKER.md  README.md  RUN_GUIDE.md  TEST_REPORT.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh  马辉教授课题组数据集——直_斜_人字齿轮传动系统典型故障实验.html
config/: __init__.py  settings.py
data/: __init__.py  cache_manager.py  csv_parser.py  filename_parser.py  loader.py  validator.py
design/: README.md  UI设计技术点.md  信号处理技术点.md  可视化技术点.md  总体设计思路.md  数据处理技术点.md
processing/: __init__.py  filters.py  frequency_analyzer.py  gear_analyzer.py  time_domain.py  timefreq_analyzer.py
tests/: __init__.py  test_data.py
ui/: __init__.py  sidebar.py
visualization/: __init__.py  comparison_plots.py  freq_plots.py  plot_utils.py  time_plots.py  timefreq_plots.py
马辉教授课题组数据集——直_斜_人字齿轮传动系统典型故障实验_files/: cross.html
